[package]
name = "parking-game"
version = "0.1.1"
edition = "2024"
license = "EUPL-1.2"

description = "A recreation of the rules set for Thinkfun's \"Rush Hour\""
homepage = "https://github.com/addisoncrump/parking-game"
readme = "README.md"
repository = "https://github.com/addisoncrump/parking-game"

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }

[lints.rust]
missing-docs = "warn"